# muxx

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  release-plz.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  pr.yml  release.yml
docs/: architecture.md
examples/: bash-integration.bash  config.json  config.toml  fish-integration.fish  tmux-status.conf  zsh-integration.zsh
src/: cli.rs  cli.ts  main.rs
src/commands/: attach.rs  completion.rs  completion.ts  config.rs  connect.rs  connect.ts  current.rs  current.ts  doctor.rs  export.rs  gc.rs  import.rs  init.rs  kill.rs  kill.ts  last.rs  list.rs  list.ts  mod.rs  new.rs  note.rs  pick.rs  rename.rs  status.rs  tag.rs  version.rs
src/core/: config.rs  config.test.ts  config.ts  env.rs  env.test.ts  env.ts  fuzzy.rs  mod.rs  notes.rs  output.rs  run.ts  session-name.test.ts  session-name.ts  session_name.rs  state.rs  tags.rs  tmux.rs  tmux.ts  which.ts
src/lib/: out.ts
src/types/: index.ts
tests/: attach.rs  completion.rs  config.rs  connect.rs  current.rs  doctor.rs  export.rs  gc.rs  init.rs  kill.rs  last.rs  list.rs  new.rs  note.rs  pick.rs  rename.rs  status.rs  tag.rs  version.rs
