[package]
name = "muxx"
version = "1.8.0"
description = "Minimal tmux session automation CLI"
edition = "2021"
license = "MIT"
repository = "https://github.com/harshsandhu44/muxx"
homepage = "https://github.com/harshsandhu44/muxx"
keywords = ["tmux", "session", "cli", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [".github/"]

[[bin]]
name = "muxx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
